--- a/books/Views/SettingsHeader.xib
+++ b/books/Views/SettingsHeader.xib
@@ -19,7 +19,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fmK-4u-5xR">
                     <rect key="frame" x="23" y="0.0" width="252.5" height="148"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="About" translatesAutoresizingMaskIntoConstraints="NO" id="aaK-CP-7w3">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIconRounded" translatesAutoresizingMaskIntoConstraints="NO" id="aaK-CP-7w3">
                             <rect key="frame" x="0.0" y="34" width="80" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="80" id="SOP-AL-GdQ"/>
@@ -77,12 +77,12 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="versionNumber" destination="HSb-Hx-2qE" id="0Xv-Xm-cly"/>
+                <outlet property="versionNumber" destination="HSb-Hx-2qE" id="NfB-6O-hqr"/>
             </connections>
             <point key="canvasLocation" x="3" y="-616"/>
         </view>
     </objects>
     <resources>
-        <image name="About" width="29" height="29"/>
+        <image name="AppIconRounded" width="180" height="180"/>
     </resources>
 </document>
